--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "zid-be-project-grub-dash-01-qualified",
-  "version": "1.0.0",
+  "name": "grub-dash",
+  "version": "1.1.0",
   "description": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Thinkful-Ed/web-dev-programs",
-    "directory": "/library/zid-be-robust-server-structure-XX-assignment/solution"
-  },
   "main": "src/server.js",
   "scripts": {
-    "docker:build": "docker image build . -t thinkful-ed/zid-be-project-grub-dash-01-qualified",
-    "docker:run": "docker run --rm -it -p 5000:5000 thinkful-ed/zid-be-project-grub-dash-01-qualified",
-    "docker:stop": "docker stop $(docker ps -q)",
-    "docker:test": "docker run -t thinkful-ed/zid-be-project-grub-dash-01-qualified npm test",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "start:solution": "npm run -it docker:build && npm run docker:run",
     "test": "jest",
-    "test:solution": "npm run docker:build && npm run docker:test",
     "test:watch": "jest --watch"
   },
   "keywords": [],
