--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,11 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
-    "typescript": "^4.0"
+    "typescript": "^4.9.5"
   }
 }
