--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,8 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
     "typescript": "^4.0.0"
