--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "eslint-config-react-app": "^7.0.1",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
