--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -46,7 +49,6 @@
     "eslint-config-react-app": "^7.0.1",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
-    "typescript": "^4.0.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "typescript": "^4.0.0"
   }
 }
