--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.9",
@@ -47,8 +48,9 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
+    "redux-logger": "^3.0.6",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
-    "typescript": "^4.0.0"
+    "typescript": "^4.1.0"
   }
 }
